fix fourth card on mobile

--- a/src/_scss/pages/homepage/_awardSearch.scss
+++ b/src/_scss/pages/homepage/_awardSearch.scss
@@ -223,7 +223,7 @@
 
           .card__body {
             .text {
-              margin-bottom: 8px;
+              margin-bottom: 4px;
             }
           }
 
